<resources>
    <string name="app_name">TopQuiz</string>
    <string name="bienvenue">Bienvenue dans TopQuiz ! Quel est votre prénom ?</string>
    <string name="saisie_prenom">Veuillez saisir votre prénom ici</string>
    <string name="jouer">Jouer !</string>
    <string name="question">Question ?</string>
    <string name="reponse1">Réponse 1</string>
    <string name="reponse2">Réponse 2</string>
    <string name="reponse3">Réponse 3</string>
    <string name="reponse4">Réponse 4</string>
</resources>
